--- a/src/App.css
+++ b/src/App.css
@@ -1216,3 +1216,52 @@ justify-content: center;
   background-color: #fff3fe;
   margin-top: 100px;
 }
+
+
+/* about page */
+
+.cardx-container {
+  max-width: 900px;
+  margin: 50px auto;
+  margin-top: 120px;
+
+  padding: 20px;
+  background: linear-gradient(to right, #181818, #2a5298);
+  color: white;
+  text-align: center;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.cardx-title {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.cardx-description {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.cardx-image {
+  width: 80%;
+  max-width: 600px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+}
+
+.cardx-subtitle {
+  font-size: 28px;
+  font-weight: bold;
+  margin-top: 30px;
+  text-decoration: underline;
+}
+
+.cardx-text {
+  font-size: 18px;
+  margin: 15px auto;
+  max-width: 700px;
+  line-height: 1.6;
+}
